demo-camel-saga/apps/order/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: order
  namespace: order
  labels:
    app: order
spec:
  to:
    kind: Service
    name: order
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
